refactor: java8